attempt_10: harden artifact + curate corpus; open attempt_11
D4 excludes never-compiling-jv_from datapoints (Contract + nearest-compiling-ancestor selector); recovered 15 baseline-broken to corrected compiling shas. prompt.md adds ByteBuddy pin + SB2-to-SB3 rows, imperative preamble, verdict fix. README documents bump how-to + results (83pct raw / 96.5pct with fixes on the clean 431 corpus). attempt_11 scaffolded: clean corpus (432) + GEPA/EvoSkills plan.